--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ python-dotenv==1.1.1
 google-cloud-bigquery==3.14.0
 redis==5.0.1
 httpx==0.28.1
+supabase==2.18.1
+supabase_auth==2.12.3
+supabase_functions==0.10.1
