--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,84 @@
+annotated-types==0.7.0
+anyio==4.10.0
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.6
+deprecation==2.1.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.116.1
-uvicorn[standard]==0.24.0
-pydantic==2.11.7
-pydantic-settings==2.10.1
-python-jose[cryptography]==3.5.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.20
-python-dotenv==1.1.1
-google-cloud-bigquery==3.14.0
-redis==5.0.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.5
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-bigquery==3.36.0
+google-cloud-core==2.4.3
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+gotrue==2.12.3
+grpcio==1.74.0
+grpcio-status==1.74.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+orjson==3.11.1
+packaging==25.0
+postgrest==1.1.1
+proto-plus==1.26.1
+protobuf==6.32.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic-extra-types==2.10.5
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+realtime==2.7.0
+redis==6.4.0
+requests==2.32.5
+rich==14.1.0
+rich-toolkit==0.14.9
+rignore==0.6.4
+rsa==4.9.1
+sentry-sdk==2.34.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.47.2
+storage3==0.12.1
+StrEnum==0.4.15
 supabase==2.18.1
 supabase_auth==2.12.3
 supabase_functions==0.10.1
+supafunc==0.10.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+ujson==5.10.0
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
