--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ httptools==0.6.4
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 markdown-it-py==3.0.0
@@ -39,6 +40,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.11.1
 packaging==25.0
+pluggy==1.6.0
 postgrest==1.1.1
 proto-plus==1.26.1
 protobuf==6.32.0
@@ -51,6 +53,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
