Add Gunicorn for application server and update environment variables in Docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_KEY=${SUPABASE_KEY}
+      - WORKER_COUNT=1
       - SUPABASE_JWT_SECRET=${SUPABASE_JWT_SECRET}
       - GCP_PROJECT_ID=${GCP_PROJECT_ID}
       - BIGQUERY_DATASET_ID=${BIGQUERY_DATASET_ID}
