--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.11.1
 packaging==25.0
+pandas==2.2.3
 pluggy==1.6.0
 postgrest==1.1.1
 proto-plus==1.26.1
